# Learning-OpenGL

./: .gitignore  CMakeLists.txt  README.md  vcpkg_required.txt
OpenGLTutorial/: BayerMatrixDither.hpp  CMakeLists.txt  Camera.hpp  CameraKeyboardControl.hpp  DeferredFramebuffer.hpp  Filter.hpp  Gizmo.hpp  KeyControlSet.hpp  Mesh.hpp  Model.hpp  PrewittFilter.hpp  PrewittFilterNormals.hpp  ShaderProgram.hpp  Skybox.hpp  Utils.hpp  VertexData.hpp  VertexDataDescription.hpp  WindowKeyboardControl.hpp  main.cpp  stb_image_proxy.hpp
OpenGLTutorial/ImGui/: CMakeLists.txt
OpenGLTutorial/Models/: CMakeLists.txt  cottage_fbx.fbx  house.fbx
OpenGLTutorial/Shaders/: BayerDither.frag.glsl  CMakeLists.txt  Filter.frag.glsl  PrewittFilter.frag.glsl  PrewittFilterNormals.frag.glsl  gizmo.vert.glsl  gourand.frag.glsl  gourand.vert.glsl  phong.frag.glsl  phong.vert.glsl
OpenGLTutorial/Shaders/BayerDither/: BayerDither.frag.glsl  BayerDither.vert.glsl
OpenGLTutorial/Shaders/FloydSteinbergDither/: FloydSteinbergDither.frag.glsl
OpenGLTutorial/Shaders/Skybox/: Skybox.frag.glsl  Skybox.vert.glsl
OpenGLTutorial/Textures/: CMakeLists.txt
